--- a/index.html
+++ b/index.html
@@ -15,7 +15,115 @@
 <body>
     <div class="container">
         <h1>Esercizio per casa</h1>
-        
+        <div class="container">
+            <div class="row">
+                <div class="col-1 my-cell blue">1 col</div>
+                <div class="col-1 my-cell blue">1 col</div>
+                <div class="col-1 my-cell blue">1 col</div>
+                <div class="col-1 my-cell blue">1 col</div>
+                <div class="col-1 my-cell blue">1 col</div>
+                <div class="col-1 my-cell blue">1 col</div>
+                <div class="col-1 my-cell blue">1 col</div>
+                <div class="col-1 my-cell blue">1 col</div>
+                <div class="col-1 my-cell blue">1 col</div>
+                <div class="col-1 my-cell blue">1 col</div>
+                <div class="col-1 my-cell blue">1 col</div>
+                <div class="col-1 my-cell blue">1 col</div>
+            </div>
+            <div class="row">
+                <div class="col-2 my-cell blue">col</div>
+                <div class="col-5 my-cell blue">col</div>
+                <div class="col-5 my-cell blue">col</div>
+            </div>
+            <div class="row">
+                <div class="col-12 my-cell blue">12 col</div>
+            </div>
+            <div class="row">
+                <div class="col-8 my-cell blue">8 col</div>
+                <div class="col-2 my-cell blue">2 col</div>
+                <div class="col-2 my-cell blue">2 col</div>
+            </div>
+            <div class="row">
+                <div class="col-1 my-cell blue">1 col</div>
+                <div class="col-2 my-cell blue">2 col</div>
+                <div class="col-2 my-cell blue">2 col</div>
+                <div class="col-6 my-cell blue">6 col</div>
+                <div class="col-1 my-cell blue">1 col</div>
+            </div>
+            <div class="row">
+                <div class="col-6 my-cell blue row">
+                    <div class="col-2 my-cell green">Nested 2 col</div>
+                    <div class="col-2 my-cell green">Nested 2 col</div>
+                    <div class="col-8 my-cell green">Nested 8 col</div>
+                </div>
+                <div class="col-6 my-cell blue row">
+                    <div class="col-6 my-cell green">Nested 6 col</div>
+                    <div class="col-6 my-cell green">Nested 6 col</div>
+                </div>
+            </div>
+            <br>
+            <div class="row">
+                <div class="col-12 my-cell blue"></div>
+            </div>
+            <div class="row">
+                <div class="col-1 my-cell blue"></div>
+                <div class="col-11 my-cell blue"></div>
+            </div>
+            <div class="row">
+                <div class="col-2 my-cell blue"></div>
+                <div class="col-10 my-cell blue"></div>
+            </div>
+            <div class="row">
+                <div class="col-3 my-cell blue"></div>
+                <div class="col-9 my-cell blue"></div>
+            </div>
+            <div class="row">
+                <div class="col-4 my-cell blue"></div>
+                <div class="col-8 my-cell blue"></div>
+            </div>
+            <div class="row">
+                <div class="col-5 my-cell blue"></div>
+                <div class="col-7 my-cell blue"></div>
+            </div>
+            <div class="row">
+                <div class="col-6 my-cell blue"></div>
+                <div class="col-6 my-cell blue"></div>
+            </div>
+        </div>
+        <h2>Offset</h2>
+        <div class="row">
+            <div class="col-1 my-cell blue col-offset-11"></div>
+        </div>
+        <div class="row">
+            <div class="col-2 my-cell blue col-offset-10"></div>
+        </div>
+        <div class="row">
+            <div class="col-3 my-cell blue col-offset-9"></div>
+        </div>
+        <div class="row">
+            <div class="col-4 my-cell blue col-offset-8"></div>
+        </div>
+        <div class="row">
+            <div class="col-5 my-cell blue col-offset-7"></div>
+        </div>
+        <div class="row">
+            <div class="col-6 my-cell blue col-offset-6"></div>
+        </div>
+        <div class="row">
+            <div class="col-7 my-cell blue col-offset-5"></div>
+        </div>
+        <div class="row">
+            <div class="col-8 my-cell blue col-offset-4"></div>
+        </div>
+        <div class="row">
+            <div class="col-9 my-cell blue col-offset-3"></div>
+        </div>
+        <div class="row">
+            <div class="col-10 my-cell blue col-offset-2"></div>
+        </div>
+        <div class="row">
+            <div class="col-11 my-cell blue col-offset-1"></div>
+        </div>
     </div>
 </body>
 </html>
